v2.1.4/_sources/plugins/sda_fabric_devices_layer2_handoffs_count_info_module.rst.txt

.. Document meta

:orphan:

.. |antsibull-internal-nbsp| unicode:: 0xA0
    :trim:

.. role:: ansible-attribute-support-label
.. role:: ansible-attribute-support-property
.. role:: ansible-attribute-support-full
.. role:: ansible-attribute-support-partial
.. role:: ansible-attribute-support-none
.. role:: ansible-attribute-support-na
.. role:: ansible-option-type
.. role:: ansible-option-elements
.. role:: ansible-option-required
.. role:: ansible-option-versionadded
.. role:: ansible-option-aliases
.. role:: ansible-option-choices
.. role:: ansible-option-choices-default-mark
.. role:: ansible-option-default-bold
.. role:: ansible-option-configuration
.. role:: ansible-option-returned-bold
.. role:: ansible-option-sample-bold

.. Anchors

.. _ansible_collections.cisco.catalystcenter.sda_fabric_devices_layer2_handoffs_count_info_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.catalystcenter.sda_fabric_devices_layer2_handoffs_count_info module -- Information module for Sda Fabric Devices Layer2 Handoffs Count Info
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This module is part of the `cisco.catalystcenter collection <https://galaxy.ansible.com/cisco/catalystcenter>`_ (version 2.1.4).

    To install it, use: :code:`ansible-galaxy collection install cisco.catalystcenter`.
    You need further requirements to be able to use this module,
    see :ref:`Requirements <ansible_collections.cisco.catalystcenter.sda_fabric_devices_layer2_handoffs_count_info_module_requirements>` for details.

    To use it in a playbook, specify: :code:`cisco.catalystcenter.sda_fabric_devices_layer2_handoffs_count_info`.

.. version_added

.. rst-class:: ansible-version-added

New in cisco.catalystcenter 6.14.0

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- This module represents an alias of the module sda\_fabric\_devices\_layer2\_handoffs\_count\_v1\_info

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

.. _ansible_collections.cisco.catalystcenter.sda_fabric_devices_layer2_handoffs_count_info_module_requirements:

Requirements
------------
The below requirements are needed on the host that executes this module.

- catalystcentersdk \>= 2.3.7.9
- python \>= 3.5






.. Options

Parameters
----------

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Parameter
    - Comments

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-_api_port"></div>

      .. _ansible_collections.cisco.catalystcenter.sda_fabric_devices_layer2_handoffs_count_info_module__parameter-_api_port:

      .. rst-class:: ansible-option-title

      **_api_port**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-_api_port" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco CATALYST Center port.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`443`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-_debug"></div>

      .. _ansible_collections.cisco.catalystcenter.sda_fabric_devices_layer2_handoffs_count_info_module__parameter-_debug:

      .. rst-class:: ansible-option-title

      **_debug**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-_debug" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco CATALYST Center SDK to enable debugging.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-_host"></div>

      .. _ansible_collections.cisco.catalystcenter.sda_fabric_devices_layer2_handoffs_count_info_module__parameter-_host:

      .. rst-class:: ansible-option-title

      **_host**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-_host" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco CATALYST Center hostname.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-_password"></div>

      .. _ansible_collections.cisco.catalystcenter.sda_fabric_devices_layer2_handoffs_count_info_module__parameter-_password:

      .. rst-class:: ansible-option-title

      **_password**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-_password" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco CATALYST Center password to authenticate.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-_username"></div>
        <div class="ansibleOptionAnchor" id="parameter-user"></div>

      .. _ansible_collections.cisco.catalystcenter.sda_fabric_devices_layer2_handoffs_count_info_module__parameter-_username:
      .. _ansible_collections.cisco.catalystcenter.sda_fabric_devices_layer2_handoffs_count_info_module__parameter-user:

      .. rst-class:: ansible-option-title

      **_username**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-_username" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: user`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco CATALYST Center username to authenticate.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"admin"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-_verify"></div>

      .. _ansible_collections.cisco.catalystcenter.sda_fabric_devices_layer2_handoffs_count_info_module__parameter-_verify:

      .. rst-class:: ansible-option-title

      **_verify**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-_verify" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag to enable or disable SSL certificate verification.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-_version"></div>

      .. _ansible_collections.cisco.catalystcenter.sda_fabric_devices_layer2_handoffs_count_info_module__parameter-_version:

      .. rst-class:: ansible-option-title

      **_version**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-_version" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Informs the SDK which version of Cisco CATALYST Center to use.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"2.3.7.6"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-fabricId"></div>

      .. _ansible_collections.cisco.catalystcenter.sda_fabric_devices_layer2_handoffs_count_info_module__parameter-fabricid:

      .. rst-class:: ansible-option-title

      **fabricId**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-fabricId" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      FabricId query parameter. ID of the fabric this device belongs to.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-headers"></div>

      .. _ansible_collections.cisco.catalystcenter.sda_fabric_devices_layer2_handoffs_count_info_module__parameter-headers:

      .. rst-class:: ansible-option-title

      **headers**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-headers" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Additional headers.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-networkDeviceId"></div>

      .. _ansible_collections.cisco.catalystcenter.sda_fabric_devices_layer2_handoffs_count_info_module__parameter-networkdeviceid:

      .. rst-class:: ansible-option-title

      **networkDeviceId**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-networkDeviceId" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      NetworkDeviceId query parameter. Network device ID of the fabric device.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-validate_response_schema"></div>

      .. _ansible_collections.cisco.catalystcenter.sda_fabric_devices_layer2_handoffs_count_info_module__parameter-validate_response_schema:

      .. rst-class:: ansible-option-title

      **validate_response_schema**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-validate_response_schema" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco CATALYST Center SDK to enable the validation of request bodies against a JSON schema.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>


.. Attributes


.. Notes

Notes
-----

.. note::
   - SDK Method used are sda.Sda.get\_fabric\_devices\_layer2\_handoffs\_count\_v1,
   - Paths used are get /dna/intent/api/v1/sda/fabricDevices/layer2Handoffs/count,
   - It should be noted that this module is an alias of sda\_fabric\_devices\_layer2\_handoffs\_count\_v1\_info
   - Supports \ :literal:`check\_mode`\ 
   - The plugin runs on the control node and does not use any ansible connection plugins, but instead the embedded connection manager from Cisco CATALYST SDK
   - The parameters starting with catalystCenter\_ are used by the Cisco CATALYST Python SDK to establish the connection

.. Seealso

See Also
--------

.. seealso::

   `Cisco DNA Center documentation for SDA GetFabricDevicesLayer2HandoffsCountV1 <https://developer.cisco.com/docs/dna-center/#!get-fabric-devices-layer-2-handoffs-count>`_
       Complete reference of the GetFabricDevicesLayer2HandoffsCountV1 API.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Get all Sda Fabric Devices Layer2 Handoffs Count Info
      cisco.catalystcenter.sda_fabric_devices_layer2_handoffs_count_info:
        _host: "{{ _host }}"
        _username: "{{ _username }}"
        _password: "{{ _password }}"
        _verify: "{{ _verify }}"
        _api_port: "{{ _api_port }}"
        _version: "{{ _version }}"
        _debug: "{{ _debug }}"
        headers: "{{my_headers | from_json}}"
        fabricId: string
        networkDeviceId: string
      register: result




.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Key
    - Description

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-catalystcenter_response"></div>

      .. _ansible_collections.cisco.catalystcenter.sda_fabric_devices_layer2_handoffs_count_info_module__return-catalystcenter_response:

      .. rst-class:: ansible-option-title

      **catalystcenter_response**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-catalystcenter_response" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list with the response returned by the Cisco DNAC Python SDK


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` :ansible-rv-sample-value:`{"response": {"count": 0}, "version": "string"}`


      .. raw:: html

        </div>



..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Extra links

Collection links
~~~~~~~~~~~~~~~~

.. raw:: html

  <p class="ansible-links">
    <a href="https://github.com/cisco-en-programmability/catalystcenter-ansible/issues" aria-role="button" target="_blank" rel="noopener external">Issue Tracker</a>
    <a href="https://github.com/cisco-en-programmability/catalystcenter-ansible" aria-role="button" target="_blank" rel="noopener external">Repository (Sources)</a>
  </p>

.. Parsing errors

